# derive-over-field

./: CHANGELOG.md.save0  derive-over-field.cabal  derive-over-field.cabal.save0
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: derive-over-field-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.0.2/: derive-over-field-0.1.0.0-inplace.conf  package.cache
src/: DeriveOverField.hs
src/Data/Derive/: OverField.hs
